fixed artist search ajax call

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<section>
 			<div class="form">
 				<form action=""> ENTER BAND NAME HERE
-					<input type="search" value="">
+					<input type="search" value="" id="searchbar">
 					<input type="submit" value="Create">
 				</form>
 			</div>
